--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,11 @@ button {
 button:hover {
     background-color: #3700b3;
 }
+
+video {
+    width: 100%;
+    height: auto;
+    border: 2px solid #6200ea;
+}
+
+
