--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,6 @@ main {
 button {
     margin: 0.5rem;
     padding: 0.5rem 1rem;
-    background-color: #6200ea;
-    color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -41,6 +39,17 @@ video {
     width: 100%;
     height: auto;
     border: 2px solid #6200ea;
+}
+
+#capture-button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer; 
+}
+
+#camera-icon {
+    width: 50px; 
+    height: 50px;
 }
 
 
